--- a/WebClient/src/components/myaccount/orderRowComponent/orderRowComponent.template.html
+++ b/WebClient/src/components/myaccount/orderRowComponent/orderRowComponent.template.html
@@ -15,7 +15,7 @@
         {{orderDetails.Quantity}}
     </td>
     <td class="form-group">
-        ₹ {{orderDetails.Quantity * price}}
+        ₹ {{orderDetails.RequestPrice}}
     </td>
     <td class="form-group">
         <span>{{orderDetails.ServiceStatusName}}</span>
