--- a/WebClient/src/components/adminModule/serviceDetailComponent/serviceDetailComponent.template.html
+++ b/WebClient/src/components/adminModule/serviceDetailComponent/serviceDetailComponent.template.html
@@ -143,6 +143,14 @@
                             <i v-show="errors.has('SubscriptionPrice')" class="fa fa-warning"></i> 
                             Please enter Subscription Price
                         </span>
+                </div>                
+                <div class="form-group">
+                    <label>
+                        Discount(After 2pm) In Percentage
+                    </label>
+                    <input type="text" v-model="serviceDetail.Discount" class="form-control"
+                        placeholder="Discount">
+
                 </div>
                 <div class="form-group">
                     <label>
