--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -87,8 +87,10 @@
                                                 <td>
                                                     {{service.Quantity}}
                                                 </td>
-                                                <td>₹
-                                                    {{getServiceAmount(service)}}
+                                                <td style="white-space: nowrap;">₹                                                    
+                                                    <span>
+                                                        {{service.RequestPrice}}
+                                                    </span>/-
                                                 </td>
                                                 <td>{{service.VehicleNumber}}</td>
                                             </tr>
@@ -122,8 +124,10 @@
                                                 <td>{{returnDateTime(service.RequestedOn)}}</td>
                                                 <td>{{returnDateTime(service.ServiceDate)}}</td>
                                                 <td>{{service.SubscribeType ? service.SubscribeType : 'Once'}}</td>
-                                                <td>₹
-                                                    {{service.VehicleTypeId == 2 ? (service.ServiceType == 2 ? service.FourWheelerOncePrice : service.FourWheelerSubPrice) : (service.ServiceType == 2 ? service.Price : service.SubscriptionPrice )}}
+                                                <td style="white-space: nowrap;">₹                                                    
+                                                    <span>
+                                                        {{service.RequestPrice}}
+                                                    </span>/-
                                                 </td>
                                                 <td>{{service.VehicleNumber}}</td>
                                                 <td>{{service.UserFirstName}} {{service.UserLastName}} <br>
