style for service done

--- a/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
+++ b/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
@@ -3,10 +3,10 @@
     <div class="panel-body fullStretch">
         <div class="row flexStart">
 
-            <div class="col-md-12">
+            <div class="col-md-12" style="padding-top:0px">
                 <div class="row">
                     <div class="col-md-12" style="padding-top:0px;">
-                        <h5 class="mt-2">Support</h5>
+                        <h5 class="header-subscribe">Support</h5>
                     </div>
                 </div>
                 <div class="row">
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>
-        <div class="row flexStart">
+        <div class="row flexStart" style="padding-bottom:40px;">
             <div class="col-md-12" style="padding-top:0px">
                 <div class="row">
                     <div class="col-md-12" style="padding-top:0px">
