--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -33,19 +33,19 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img src="dist/img/img1.jpeg" style="width:100%">
+                    <img src="dist/img/img1.jpeg" style="width:100%; height:230px">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img src="dist/img/img2.jpeg" style="width:100%">
+                    <img src="dist/img/img2.jpeg" style="width:100%; height:230px">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img src="dist/img/img3.jpeg" style="width:100%">
+                    <img src="dist/img/img3.jpeg" style="width:100%; height:230px">
                     <div class="text">Caption Three</div>
                 </div>
 
