--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -368,7 +368,7 @@
                     <div
                         style="font-weight: bold; text-align: right;">
                         <span :class="discountPrice ? 'strikeText': ''">
-                            Amount: ₹ {{servicePrice}}/- <br>
+                            Price: ₹ {{servicePrice}}/- <br>
                         </span>
                         <span v-if="discountPrice">
                             Discount Price: ₹ {{discountPrice}}/-
