--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -28,37 +28,27 @@
 
 
         <div class="adsBanner home-banner-block">
-            <div class="slideshow-container">
+            <div class="slideshow-container" v-if="bannerImages.length > 0">
 
                 <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="dist/img/img1.jpeg" style="width:100%; height:230px">
-                    <div class="text">Caption Text</div>
+                <div class="mySlides fade" v-for="banner in bannerImages">                    
+                    <img :src="banner.Image" style="width:100%; height:230px">
+                    <!-- <div class="text">Caption Text</div> -->
                 </div>
 
-                <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
+                <!-- <div class="mySlides fade">
                     <img src="dist/img/img2.jpeg" style="width:100%; height:230px">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
                     <img src="dist/img/img3.jpeg" style="width:100%; height:230px">
                     <div class="text">Caption Three</div>
-                </div>
+                </div> -->
 
                 <!-- Next and previous buttons -->
                 <a class="prev prev-ing" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next prev-ing" onclick="plusSlides(1)">&#10095;</a>
-            </div>
-
-            <!-- The dots/circles -->
-            <div class="banner-dots">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
 
