--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -1864,7 +1864,7 @@ label{
 .outer{
     width: 95vw;
     overflow: hidden;
-    margin-top: 65px;
+    // margin-top: 65px;
 .product-row{
     overflow-x: scroll;
     display: flex;
@@ -1888,8 +1888,8 @@ label{
     }
 }
 .product-row{
-    padding:0px 10px;
-    margin-top:20px;
+    // padding:0px 10px;
+    // margin-top:20px;
 }
 
 }
