--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="form-group">
                     <div style="width: 100%; overflow: scroll; margin-top: 20px;"
-                        v-for="(serviceCategory, vehicleCategoryType) in servicesList">
+                        v-for="(serviceCategory, index) in servicesList">
 
                         <div class="cellrow ind">
                             <h5>{{serviceCategory.VehicleCategoryTypeName}}</h5>
