--- a/WebClient/src/components/myaccount/reachargeComponent/reachargeComponent.template.html
+++ b/WebClient/src/components/myaccount/reachargeComponent/reachargeComponent.template.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
                             <label class="bold">Wallet Balance : </label>
@@ -61,10 +61,10 @@
                                 {{walletSummary && walletSummary.TransactionAmount ? walletSummary.TransactionAmount : '0'}} /-</label>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group">
+                        <div class="">
                             <label class="bold">Recharge History</label>
                             <myWallet hideHeader="true" :isWalletChanged="isWalletChanged"></myWallet>
                         </div>
