--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -25,7 +25,8 @@
                                         <div class="form-group">
 
                                             <div class="col-md-12 searchResultsAmenitiesDiv">
-                                                <input type="text" style="font-size:14px;" placeholder="Please type here to choose address..."
+                                                <input type="text" style="font-size:14px;"
+                                                    placeholder="Please type here to choose address..."
                                                     v-model.trim="searchAddressText">
                                             </div>
                                             <div class="form-control searchResultsAmenities"
@@ -111,34 +112,36 @@
 
                 <div class="form-group border-line">
                     <div class="info subscribe-field">
-                    <img :src="serviceDetail.ServiceImage ? serviceDetail.ServiceImage : (serviceDetail.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
-                        height="70" width="100%" @click="showMoreInfo(service)">
-                    <div class="form-group serviceName subscribeTop">
-                        <div class="bold">{{serviceDetail.ServiceName}}</div>
+                        <img :src="serviceDetail.ServiceImage ? serviceDetail.ServiceImage : (serviceDetail.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
+                            height="70" width="100%" @click="showMoreInfo(service)">
+                        <div class="form-group serviceName subscribeTop">
+                            <div class="bold">{{serviceDetail.ServiceName}}</div>
+                        </div>
+
                     </div>
-                    
                 </div>
-                </div>
-                <div class="form-group purchase-vehical" v-if="serviceType == 2 && serviceDetail.VehicleCategoryType != 3">
+                <div class="form-group purchase-vehical"
+                    v-if="serviceType == 2 && serviceDetail.VehicleCategoryType != 3">
                     <div class="bold">Personal Vehicle</div>
                     <div class="mg-r-15">
-                    <input type="checkbox" class="personalVehicle" name="personalVehicle"
-                        @click="changeSelection(true, $event)" :checked="vehicleInfo.IsPersonal"> Yes
-                    <input type="checkbox" class="personalVehicle" name="personalVehicle"
-                        @click="changeSelection(false, $event)" :checked="!vehicleInfo.IsPersonal">No
+                        <input type="checkbox" class="personalVehicle" name="personalVehicle"
+                            @click="changeSelection(true, $event)" :checked="vehicleInfo.IsPersonal"> Yes
+                        <input type="checkbox" class="personalVehicle" name="personalVehicle"
+                            @click="changeSelection(false, $event)" :checked="!vehicleInfo.IsPersonal">No
                     </div>
                 </div>
                 <div class="form-group" v-if="serviceDetail.VehicleCategoryType != 3">
                     <div class="cellRow" style="width: 100%; overflow: scroll; margin-top: 20px;">
-                        <div v-bind:class="['cell flec-popoo', selectedVehicle && selectedVehicle.VehicleId == product.VehicleId ? 'activeSelected': '']" v-for="product in myServiceProducts"
+                        <div v-bind:class="['cell flec-popoo', selectedVehicle && selectedVehicle.VehicleId == product.VehicleId ? 'activeSelected': '']"
+                            v-for="product in myServiceProducts"
                             v-if="vehicleInfo.IsPersonal === (product.IsPersonal == 0 ? false : true)"
                             style="flex: 0 0 12%;">
                             <label class="radioLabel">
                                 <input type="radio" class="vechiles" name="Vechile" :value="product.VehicleId"
                                     @click="chooseVehicle(product, $event)">
-                                    <div class="inner-pp">
-                                <img :src="product.VehicleImage ? product.VehicleImage : (product.VehicleTypeId == 2 ? defaultCarImage : defaultBikeImage)"
-                                    height="100" width="100">
+                                <div class="inner-pp">
+                                    <img :src="product.VehicleImage ? product.VehicleImage : (product.VehicleTypeId == 2 ? defaultCarImage : defaultBikeImage)"
+                                        height="100" width="100">
                                 </div>
                             </label>
 
@@ -166,8 +169,8 @@
                         Date
                     </label>
                     <datePickerComponent :keyString="'StartDate'" v-model="vehicleInfo.ServiceDate"
-                        :value="vehicleInfo.ServiceDate" :minimumDate="minDate" :format="'Do MMM YYYY'" :onUpdate="updateServiceDate"
-                        :pickerType="'date'">
+                        :value="vehicleInfo.ServiceDate" :minimumDate="minDate" :format="'Do MMM YYYY'"
+                        :onUpdate="updateServiceDate" :pickerType="'date'">
                     </datePickerComponent>
 
                 </div>
@@ -192,7 +195,7 @@
                 <div class="row" v-if="serviceType == 1">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="bold"  style="font-size: 1rem;">
+                            <label class="bold" style="font-size: 1rem;">
                                 Frequency
                             </label>
 
@@ -203,8 +206,11 @@
                                     v-if="serviceDetail.serviceSubscribeTypes.indexOf(product.SubscribeId) > -1">
                                     <span class="radioLabel customradioLabel">
                                         <input type="radio" name="serviceFrequency" :value="product.SubscribeId"
-                                            v-model="vehicleInfo.Frequency" v-validate="'required'" style="display: none;">
-                                        <button v-bind:class="['btn-default serviceName custom-bbtn', vehicleInfo.Frequency == product.SubscribeId ? 'active': '']"  @click="selectSubscribeType(product)">
+                                            v-model="vehicleInfo.Frequency" v-validate="'required'"
+                                            style="display: none;">
+                                        <button
+                                            v-bind:class="['btn-default serviceName custom-bbtn', vehicleInfo.Frequency == product.SubscribeId ? 'active': '']"
+                                            @click="selectSubscribeType(product)">
                                             {{product.SubscribeType}}
                                         </button>
                                     </span>
@@ -222,55 +228,76 @@
                         <div class="form-group" v-if="vehicleInfo.Frequency == 2">
                             <div class="bold">Day</div>
                             <div class="flex-wrapper">
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 1 ? 'active': '']" @click="selectWeeklyday(1)">Sunday</button>
-                                </label>
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 1 ? 'active': '']"
+                                            @click="selectWeeklyday(1)">Sunday</button>
+                                    </label>
+                                </div>
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 2 ? 'active': '']"
+                                            @click="selectWeeklyday(2)">Monday</button>
+                                    </label>
+                                </div>
+
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 3 ? 'active': '']"
+                                            @click="selectWeeklyday(3)">Tuesday</button>
+                                    </label>
+                                </div>
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 4 ? 'active': '']"
+                                            @click="selectWeeklyday(4)">Wednesday</button>
+                                    </label>
+                                </div>
+
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 5 ? 'active': '']"
+                                            @click="selectWeeklyday(5)">Thursday</button>
+                                    </label>
+                                </div>
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 6 ? 'active': '']"
+                                            @click="selectWeeklyday(6)">Friday</button>
+                                    </label>
+                                </div>
+                                <div class="radioPadg">
+                                    <label>
+                                        <button
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 7 ? 'active': '']"
+                                            @click="selectWeeklyday(7)">Saturday</button>
+                                    </label>
+                                </div>
                             </div>
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 2 ? 'active': '']" @click="selectWeeklyday(2)">Monday</button>
-                                </label>
+
+                            <div style="display: none;">
+
+                                <input type="radio" value="1" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Monday
+                                <input type="radio" value="2" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Tuesday
+                                <input type="radio" value="3" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Wednesday
+                                <input type="radio" value="4" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Thursday
+                                <input type="radio" value="5" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Friday
+                                <input type="radio" value="6" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Saturday
+                                <input type="radio" value="7" name="weeklyDay" v-validate="'required'"
+                                    v-model="vehicleInfo.WeeklyDay">Sunday
                             </div>
-                            
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 3 ? 'active': '']" @click="selectWeeklyday(3)">Tuesday</button>
-                                </label>
-                            </div>                            
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 4 ? 'active': '']" @click="selectWeeklyday(4)">Wednesday</button>
-                                </label>
-                            </div>
-                            
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 5 ? 'active': '']" @click="selectWeeklyday(5)">Thursday</button>
-                                </label>
-                            </div>
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 6 ? 'active': '']" @click="selectWeeklyday(6)">Friday</button>
-                                </label>
-                            </div>
-                            <div class="radioPadg">
-                                <label>
-                                    <button v-bind:class="['btn-default custom-bbtn', vehicleInfo.WeeklyDay == 7 ? 'active': '']" @click="selectWeeklyday(7)">Saturday</button>
-                                </label>
-                            </div>
-                        </div>
-                            
-                        <div style="display: none;">
-                            
-                            <input type="radio" value="1" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Monday
-                            <input type="radio" value="2" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Tuesday
-                            <input type="radio" value="3" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Wednesday
-                            <input type="radio" value="4" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Thursday
-                            <input type="radio" value="5" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Friday
-                            <input type="radio" value="6" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Saturday
-                            <input type="radio" value="7" name="weeklyDay" v-validate="'required'" v-model="vehicleInfo.WeeklyDay">Sunday
-                        </div>
                         </div>
 
                         <div class="form-group" v-if="vehicleInfo.Frequency  == 2 && errors.has('weeklyDay')">
@@ -322,13 +349,13 @@
 
                 <div class="address">
 
-                    <div v-if="selectedPersonAddress" 
-                        style="margin-top: 25px;float: left;">
+                    <div v-if="selectedPersonAddress" style="margin-top: 25px;float: left;">
                         <viewAddressComponent v-if="selectedPersonAddress" :addressId="selectedPersonAddress.AddressId"
                             :isDefault="selectedPersonAddress.IsDefault" disabled="true"></viewAddressComponent>
                     </div>
                     <div v-if="serviceDetail.VehicleCategoryType == 3 && userAddressList.length == 0">
-                        You don't have any address to deliver this product, please add Address in <a href="javascript: void(0)" @click="navigateToMyProfile">My Profile</a> and confirm
+                        You don't have any address to deliver this product, please add Address in <a
+                            href="javascript: void(0)" @click="navigateToMyProfile">My Profile</a> and confirm
                     </div>
                     <div style="margin-top:25px;float: right;" v-if="userAddressList.length > 1">
                         <a href="javascript: void(0)" @click="choosePersonAddress">Change</a>
@@ -365,8 +392,7 @@
                 </div>
 
                 <div class="form-group">
-                    <div
-                        style="font-weight: bold; text-align: right;">
+                    <div style="font-weight: bold; text-align: right;">
                         <span :class="discountPrice ? 'strikeText': ''">
                             Price: ₹ {{servicePrice}}/- <br>
                         </span>
@@ -394,10 +420,39 @@
             :updateParent="updateVehicleAddress" :isPersonal="vehicleInfo.IsPersonal" :isOpen="openedVehicleAddPopup"
             :closeVehicleAddPopup="closeVehicleAddPopup" :serviceDetail="serviceDetail"></vehicleAddComponent>
 
-        <addressChooseComponent v-if="isAddressPopup" :isOpen="isAddressPopup"
-            :selectedAddress="updateSelectedAddress" 
+        <addressChooseComponent v-if="isAddressPopup" :isOpen="isAddressPopup" :selectedAddress="updateSelectedAddress"
             :closeVehicleAddPopup="closeSelectAddressPopup"></addressChooseComponent>
-            
-        <toastrMessageComponent v-if="isDialogOpen" :message="popupMessage" :headerTitle="headerTitle" :isOpen="isDialogOpen" :closeToastrPopup="closeToastrPopup"></toastrMessageComponent>
+
+        <div class="modal custom-model-style" data-backdrop="static" role="dialog" id="insufftoastrMessagePopup">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
+                            data-dismiss="modal">
+                            &times;
+                        </button>
+                        <h5>{{headerTitle}}</h5>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    {{popupMessage}}
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-success btn-sm pull-right" v-if="rechargeVisible" title="Recharge" @click="navigateToRecharge">Recharge</button>
+                        <button class="btn btn-success btn-sm pull-right" title="OK" @click="closeToastrPopup">OK</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
